--- a/index.html
+++ b/index.html
@@ -17,7 +17,12 @@
     <header>
         <nav>
             <a href="#" class="logo">LMF.</a>
-            <ul class="nav-links">
+            <div class="hamburger" id="hamburger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+            <ul class="nav-links" id="nav-links">
                 <li><a href="#about">À propos</a></li>
                 <li><a href="#works">Travaux</a></li>
                 <li><a href="#contact">Contact</a></li>
