Improve tooltip functionality: add click-to-pin, hide on outside click, enable link interaction

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <h1 class="fade-in-up">Lysiane <br> Martina-Fieschi</h1>
                 <p class="subtitle fade-in-up delay-1">Master en Histoire de l'Art</p>
                 <p class="hero-description fade-in-up delay-2">
-                    Curieuse des histoires que les œuvres racontent, j’explore les liens entre l’art et les vies quotidiennes. Je conçois et j’anime des actions socio‑culturelles pour ouvrir les portes des musées, des images et des idées à celles et ceux qui en sont souvent tenus à distance. Mon travail vise un accès réel et sensible à l’art, pour toutes et tous.
+                    Curieuse des messages que les oeuvres transmettent, je m'intéresse à l'art comme vecteur d'idées. Convaincue qu'il doit être à disposition de toutes et tous, je conçois des actions socio-culturelles où les iconographies et représentations artistiques favorisent le lien social.
                 </p>
             </div>
             <div class="hero-image-container fade-in delay-1">
@@ -49,7 +49,7 @@
         <section id="about" class="about">
             <div class="container">
                 <div class="about-text reveal">
-                    <h2>L'Art comme fenêtre sur l'Histoire</h2>
+                    <h2>L'Art, fenêtre sur l'Histoire</h2>
                     <p>Passionnée par les récits que les œuvres murmurent à travers les siècles. Spécialisée dans l'analyse iconographique et le contexte socio-culturel de la création artistique.</p>
                 </div>
             </div>
