Correction des images dans l'article et l'index

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     </article>
                     <article class="card reveal delay-2">
                         <div class="card-img-container">
-                            <img src="assets/images/Le mythe de la caverne/fig 1 Scène du puits, environ 17000 et 13000 av jc grotte de lascaux france.jpg" alt="Scène du puits - Grotte de Lascaux" class="card-img" loading="lazy">
+                            <img src="assets/images/Le mythe de la caverne/Fig. 11 - Oeuvres gravées représentant des personnages humanoïdes portant des coiffes rappelant les chapeaux de champignons, Pegtymel, Tchoukotka, Russie..jpg" alt="Oeuvres gravées représentant des personnages humanoïdes - Pegtymel, Tchoukotka" class="card-img" loading="lazy">
                         </div>
                         <div class="card-content">
                             <h3>Le Mythe de la caverne : les psychonautes de Cro-Magnon.</h3>
